--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   table_calendar:
+  google_maps_flutter: ^2.2.0
+  geolocator: ^9.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,9 +62,23 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  - assets/floor_1.png
+  - assets/floor_2.png
+  - assets/floor_3.png
+  - assets/floor_4.png
+  - assets/floor_5.png
+  - assets/floor_b1.png
+  - assets/floor_b2.png
+  - assets/parking.png
+  - assets/208floor_1.png
+  - assets/208floor_2.png
+  - assets/208floor_3.png
+  - assets/208floor_4.png
+  - assets/208floor_5.png
+  - assets/208floor_6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
