--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   table_calendar:
   google_maps_flutter: ^2.2.0
   geolocator: ^9.0.0
+  image_picker: ^0.8.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,6 +81,7 @@ flutter:
   - assets/208floor_4.png
   - assets/208floor_5.png
   - assets/208floor_6.png
+  - assets/profile.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
