--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  modal_progress_hud_nsn: ^0.5.0
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
