--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^5.3.3
   modal_progress_hud_nsn: ^0.5.0
   cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.7
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
