--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   - assets/208floor_6.png
   - assets/profile.png
   - assets/icons/AppIcon.png
+  - assets/profile1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
